Projeto1-Front.git

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="author" content="Carolina Almeida">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <link rel="icon" type="image/svg" href="./assets/img/favicon.svg" />
+    <link rel="stylesheet" href="./assets/img/css/style.css">
+
     <title>Meu Perfil</title>
 </head>
 <body>
