--- a/contato.html
+++ b/contato.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
+		<link rel="stylesheet" href="./assets/img/css/style.css">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Projeto Portfólio">
@@ -135,5 +136,12 @@
 			</h3>
 
 		</footer>
+
+<!-- Script JavaScript-->
+<script src="assets/js/script.js"></script>
+
 	</body>
 </html>
+
+
+
